able to delete and edit (partially) the records, using HTML hidden field"

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 <html>
   <link rel="stylesheet" href="style/main.css" />
   <script defer src="js/main.js"></script>
+
+  <!-- <script>
+    const testTable = () => {
+      const tr1 = document.getElementById('tr-1');
+      console.log('childNodes:', tr1.childNodes, tr1.childNodes[1]);
+    };
+  </script> -->
+
   <title>Auto Gen</title>
   <body />
+
+  <!-- <table id="table-1">
+    <tr>
+      <th>Name</th>
+      <th>Age</th>
+    </tr>
+    <tr id="tr-1">
+      <td>Sourav</td>
+      <td>29</td>
+    </tr>
+    <tr>
+      <td>Nirmal</td>
+      <td>22</td>
+    </tr>
+  </table> -->
+
+  <!-- <button onclick="testTable()">test table</button> -->
 </html>
