Update operation working correctly now

--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- Test cases: 
-  1. Provide invalid dept id in Person constructor 
-  2. Provide null name/age in Person constructor 
-  3. Check status without generating data  
--->
-
 <html>
   <link rel="stylesheet" href="style/main.css" />
   <script defer src="js/main.js"></script>
@@ -17,6 +11,11 @@
 
   <title>Auto Gen</title>
   <body />
+
+  <div
+    id="debug-info"
+    style="position: absolute; bottom: 0; background-color: lightblue ;"
+  ></div>
 
   <!-- <table id="table-1">
     <tr>
