--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </script> -->
 
   <title>Auto Gen</title>
-  <body />
+  <body id="root" />
 
   <div
     id="debug-info"
-    style="position: absolute; bottom: 0; background-color: lightblue ;"
+    style="position: absolute; bottom: 0; background-color: lightblue"
   ></div>
 
   <!-- <table id="table-1">
